fixed the visibility of the when the modal is display. Also moved the game title to the top of the game won page

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,8 @@ body {
 #hallway,
 #room,
 #trailer-embed,
-#false-ending {
+#false-ending,
+#game-won {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,15 +59,18 @@ body {
   width: 90%;
   max-height: 100vh;
   padding: 5px;
-  margin: auto;
-  /* border: 1px solid red; */
+  margin: 60px auto;
 }
 
-#game-won {
-  justify-content: center;
-  align-items: space-around;
-  padding: 10px;
-  text-align: center;
+@media (min-width: 800px) {
+  #start-game,
+  #hallway,
+  #room,
+  #trailer-embed,
+  #false-ending,
+  #game-won {
+    margin: 0 auto;
+  }
 }
 
 /*****************************
@@ -120,30 +124,23 @@ body {
 }
 
 button {
-  border: 5px solid #63C328;
+  border: 3px solid #63C328;
   padding: 10px;
   background-color: #cf7017;
   font-weight: 700;
-  font-size: .6rem;
+  font-size: .8rem;
   font-family: 'Press Start 2P';
   color: rgba(0, 0, 0, 0.7);
   margin-bottom: .5rem;
   cursor: pointer;
   margin: 5px 20px;
+  padding: 7px;
 }
 
 button.backToHomeBtn {
   border: 5px solid #63C328;
   color: #cf7017;
   background-color: #000;
-}
-
-@media (min-width: 320px) {
-  button {
-    font-size: .8rem;
-    padding: 7px;
-    border: 3px solid #63C328;
-  }
 }
 
 @media (min-width: 800px) {
@@ -153,6 +150,7 @@ button.backToHomeBtn {
 
   button {
     font-size: 1.2rem;
+    border-width: 5px;
   }
 }
 
@@ -165,8 +163,8 @@ button.backToHomeBtn {
 }
 
 img {
-  max-width: 100%;
-  height: 300px;
+  max-height: 150px;
+  max-width: 70%;
   filter: opacity(80%) hue-rotate(240deg);
   border-radius: 10px;
   margin: auto;
@@ -185,14 +183,6 @@ img {
   filter: hue-rotate(0);
 }
 
-/* Screens that start at 320px */
-@media (min-width: 320px) {
-  img {
-    max-height: 150px;
-    max-width: 70%;
-  }
-}
-
 /* Screens that start at 800px */
 @media (min-width: 800px) {
   img {
@@ -202,45 +192,15 @@ img {
 }
 
 /*****************************
-*          VIDEO
-*****************************/
-.player {
-  position: relative;
-  padding-top: 56.25%;
-  width: 100%;
-}
-
-.react-player {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-@media (min-width: 320px) {
-  Video
-  .player {
-    padding-bottom: 45%;
-  }
-}
-
-/*****************************
 *    PARAGRAPHS & SPANS
 *****************************/
 span,
 p {
   /* Changing the text itself */
-  font-size: .6rem;
+  font-size: .55rem;
   text-align: center;
   margin-bottom: 1em;
   /* width: 80%; */
-}
-
-/* Screens that start at 320px */
-@media (min-width: 320px) {
-  span,
-  p {
-    font-size: 0.55rem;
-  }
 }
 
 .event-modal p {
@@ -284,49 +244,41 @@ h3 {
   position: absolute;
   padding: 10px;
   margin: 0 auto;
-  width: 90%;
+  width: 84%;
   border: 12px solid orange;
   height: 90%;
-  z-index: 100;
+  z-index: 200;
   background-color: #1c1c1c;
   text-align: center;
   overflow: auto;
 }
-
-/* .game-over-modal {
-  position: absolute;
-  margin: 0 auto;
-  padding: 10px;
-  width: 90%;
-  height: 90%;
-  z-index: 100;
-  background-color: #1c1c1c;
-  background: cover;
-  overflow: auto;
-} */
-
 
 /*****************************
 *        INVENTORY
 *****************************/
 #inventory {
   position: fixed;
-  z-index: 50;
-  bottom: 0;
+  z-index: 100;
+  top: 0;
   left: 0;
-  margin: 10px;
+  margin: 10px auto;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: row;
+  width: 100%;
+}
+
+#inventory > div {
+  display: inline-block;
 }
 
 #inventory .btn-audio {
   border: 4px solid rgba(173, 216, 230, 0.726);
   border-radius: 5px;
-  background-color:rgba(0, 0, 0, 0.3);  
+  background-color:rgba(0, 0, 0, 0.8);  
   width: 40px;
   height: 40px;
   color: #cdcdcd;
-  margin: 5px 0;
+  margin: 5px;
 }
 
 #inventory span {
@@ -336,8 +288,9 @@ h3 {
   height: 40px;
   line-height: 40px;
   border-radius: 10px;
-  margin: 5px 0;
+  margin: 5px;
   display: block;
+  background-color: #1C1C1C;
 }
 
 #inventory #gold-key {
